localisation for audit logs

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -165,5 +165,135 @@
   "Činnost": "ENČinnost",
   "Čína": "ENČína",
   "Žlutá": "ENŽlutá",
-  "žádné": "ENžádné"
+  "žádné": "ENžádné",
+
+  "Neznámý rank": "ENNeznámý rank",
+  "Přidat": "ENPřidat",
+  "bod(y) ocenění": "ENbod(y) ocenění",
+  "Odebrat": "ENOdebrat",
+  "armáda": "ENarmáda",
+  "kvůli hladomoru": "ENkvůli hladomoru",
+  "kvůli verbování": "ENkvůli verbování",
+  "V regionu": "ENV regionu",
+  "odebrat": "ENodebrat",
+  "a": "ENa",
+  "kvůli osvobození": "ENkvůli osvobození",
+  "ztráty z úspěšné operace": "ENztráty z úspěšné operace",
+  "odešlo v rámci z úspěšné operace": "ENodešlo v rámci z úspěšné operace",
+  "odměna za operaci": "ENodměna za operaci",
+  "ztráty z neúspěšné operace": "ENztráty z neúspěšné operace",
+  "odešlo v rámci z neúspěšné operace": "ENodešlo v rámci z neúspěšné operace",
+  "povstalců": "ENpovstalců",
+  "nepřátel": "ENnepřátel",
+  "Úspěšně osvobozen": "ENÚspěšně osvobozen",
+  "přesunout": "ENpřesunout",
+  "zpět do": "ENzpět do",
+  "zbytek odebrat": "ENzbytek odebrat",
+  "nepřátelských vojáků": "ENnepřátelských vojáků",
+  "Hladomor": "ENHladomor",
+  "Výcvik nových vojáků": "ENVýcvik nových vojáků",
+  "Úspěšně potlačené povstání v regionu": "ENÚspěšně potlačené povstání v regionu",
+  "Neúspěšně potlačené povstání v regionu": "ENNeúspěšně potlačené povstání v regionu",
+  "Účast na osvobození regionu": "ENÚčast na osvobození regionu",
+  "Účast na neúspěšném osvbození regionu": "ENÚčast na neúspěšném osvbození regionu",
+  "Úspěšně splněna vojenské operace": "ENÚspěšně splněna vojenské operace",
+  "Selhání během vojenské operace": "ENSelhání během vojenské operace",
+  "Nepokoje": "ENNepokoje",
+  "Poskytli soudruhy pro nábor do armády": "ENPoskytli soudruhy pro nábor do armády",
+  "pokus o vyplenění": "ENpokus o vyplenění",
+  "vyplenili region": "ENvyplenili region",
+  "pokus o obsazení": "ENpokus o obsazení",
+  "obsadili region": "ENobsadili region",
+  "Úspěšně osvobozen z područí": "ENÚspěšně osvobozen z područí",
+  "Nezdařený pokus o osvobození": "ENNezdařený pokus o osvobození",
+  "Vojenské shrnutí": "ENVojenské shrnutí",
+  "Regionální shrnutí": "ENRegionální shrnutí",
+  "Hodnocení": "ENHodnocení",
+  "Hlady zemřelo": "ENHlady zemřelo",
+  "Vycvičeno": "ENVycvičeno",
+  "Potlačení povstání": "ENPotlačení povstání",
+  "Naše ztráty": "ENNaše ztráty",
+  "Ztráty nepřátel": "ENZtráty nepřátel",
+  "Prohra s rebely": "ENProhra s rebely",
+  "Osvobození regionu": "ENOsvbození regionu",
+  "Selhání při osvobození": "ENSelhání při osvobození",
+  "Úspěšná operace": "ENÚspěšná operace",
+  "Odešlo": "ENOdešlo",
+  "Získali jsme": "ENZískali jsme",
+  "Neúspěšná operace": "ENNeúspěšná operace",
+  "Produkce": "ENProdukce",
+  "Vyprodukovali jsme": "ENVyprodukovali jsme",
+  "Efektivita byla": "ENEfektivita byla",
+  "Zemřelo": "ENZemřelo",
+  "soudruhů": "ENsoudruhů",
+  "Zaznamenali jsme": "ENZaznamenali jsme",
+  "zrádců": "ENzrádců",
+  "Výstavba výrobních zařízení": "ENVýstavba výrobních zařízení",
+  "Dokončili jsme": "ENDokončili jsme",
+  "na": "ENna",
+  "Oprava výrobních zařízení": "ENOprava výrobních zařízení",
+  "Opravili jsme": "ENOpravili jsme",
+  "Noví pracovníci": "ENNoví pracovníci",
+  "Máme navíc": "ENMáme navíc",
+  "soudruhů schopných práce": "ENsoudruhů schopných práce",
+  "Poškozené výrobní zařízení": "ENPoškozené výrobní zařízení",
+  "Povstalci poškodili": "ENPovstalci poškodili",
+  "Odchozí transport": "ENOdchozí transport",
+  "Odešel transport čítající": "ENOdešel transport čítající",
+  "Příchozí transport": "ENPříchozí transport",
+  "Dorazil transport čítající": "ENDorazil transport čítající",
+  "Úspěšné potlačení vzpoury, naše ztráty": "ENÚspěšné potlačení vzpoury, naše ztráty",
+  "ztráty nepřátel": "ENztráty nepřátel",
+  "Ostudná porážka od rebelů, naše ztráty": "ENOstudná porážka od rebelů, naše ztráty",
+  "Výstavba monumentu": "ENVýstavba monumentu",
+  "Dokončili jsme stavbu": "ENDokončili jsme stavbu",
+  "monumentu": "ENmonumentu",
+  "Nábor armády": "ENNábor armády",
+  "Poskytli jsme": "ENPoskytli jsme",
+  "soudruhů pro nábor do armády": "ENsoudruhů pro nábor do armády",
+  "Neúspěšný pokus o vyplenění": "ENNeúspěšný pokus o vyplenění",
+  "Naše armáda úspěšně odrazila": "ENNaše armáda úspěšně odrazila",
+  "Vyplenění nepřítelem": "ENVyplenění nepřítelem",
+  "vyplenili region, přišli jsme o většinu produkce": "ENvyplenili region, přišli jsme o většinu produkce",
+  "Neúspěšný pokus o obsazení": "ENNeúspěšný pokus o obsazení",
+  "Obsazení nepřítelem": "ENObsazení nepřítelem",
+  "obsadili region, přišli jsme o veškerou kontrolu": "ENobsadili region, přišli jsme o veškerou kontrolu",
+  "produkce": "ENprodukce",
+  "Výstavba výrobních zařízení na": "ENVýstavba výrobních zařízení na",
+  "Oprava výrobních zařízení na": "ENOprava výrobních zařízení na",
+  "Poškozené výrobní zařízení na": "ENPoškozené výrobní zařízení na",
+  "povstalci": "ENpovstalci",
+  "Poskytnutí soudruhů pro armádu": "ENPoskytnutí soudruhů pro armádu",
+  "Odražen": "ENOdražen",
+  "Vojáci zemřeli hlady": "ENVojáci zemřeli hlady",
+  "Vyzbrojení nových vojáků": "ENVyzbrojení nových vojáků",
+  "Účast na neúspěšném osvbození": "ENÚčast na neúspěšném osvbození",
+  "kvůlu rebélii": "ENdue to rebellion",
+  "Opravit": "ENRepair",
+  "Poškodit": "ENDamage",
+  "monument": "ENmonument",
+  "Deaktivovat obsazený region": "ENDeactivate occupied region",
+  "Informovat o osvobození regionu": "ENInform about region liberation",
+  "Informovat o nepodařeném pokusu osvobodit region.": "ENInform about failed liberation attempt",
+  "Úspěšně potlačené povstání": "ENSuccessfully suppressed rebellion",
+  "Neúspěšně potlačené povstání": "ENFailed rebellion suppression",
+  "pšenici": "ENwheat (accusative)",
+  "ocel": "ENsteel (accusative)",
+  "palivo": "ENfuel (accusative)",
+  "jednotku": "ENunit (accusative singular)",
+  "skupinu": "ENgroup (accusative)",
+  "produkční závod": "ENproduction facility",
+  "produkční závody": "ENproduction facilities",
+  "produkčních závodů": "ENproduction facilities (genitive plural)",
+  "příšerná": "ENterrible",
+  "špatná": "ENbad",
+  "průměrná": "ENaverage",
+  "velice dobrá": "ENvery good",
+  "úžasná": "ENamazing",
+  "Excelentní vedení": "ENExcellent leadership",
+  "Dobré vedení": "ENGood leadership",
+  "Špatné vedení": "ENBad leadership",
+  "Otřesné vedení": "ENTerrible leadership",
+  "Standardní vedení": "ENStandard leadership",
+  "Neznámý typ rozkazu: ": "ENUnknown order type: "
 }
