--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -9,7 +9,6 @@
   "Boj": "ENBoj",
   "Budované": "ENBudované",
   "Bílá": "ENBílá",
-  "Bělorusko": "ENBělorusko",
   "Celkem": "ENCelkem",
   "Cizí armády": "Foreign armies",
   "Cílový region": "ENCílový region",
@@ -21,7 +20,6 @@
   "Dokončili jsme": "ENDokončili jsme",
   "Dokončili jsme stavbu": "ENDokončili jsme stavbu",
   "Dorazil transport čítající": "ENDorazil transport čítající",
-  "Dálný východ": "ENDálný východ",
   "Efektivita byla": "ENEfektivita byla",
   "Excelentní vedení": "ENExcellent leadership",
   "Existují vojenské přehlídky a vojenské přehlídky, na které se nezapomíná. Takové přehlídky, které představí neporazitelné vojsko, nové zbraně, zkušené generály. Takové přehlídky, při kterých davy jásají a jedno oko nezůstane suché. Takové přehlídky, které vykouzlí úsměv na tváří Vůdce, mraky se rozestoupí a slunce rozzáří oblohu. ": "ENExistují vojenské přehlídky a vojenské přehlídky, na které se nezapomíná. Takové přehlídky, které představí neporazitelné vojsko, nové zbraně, zkušené generály. Takové přehlídky, při kterých davy jásají a jedno oko nezůstane suché. Takové přehlídky, které vykouzlí úsměv na tváří Vůdce, mraky se rozestoupí a slunce rozzáří oblohu. ",
@@ -41,11 +39,7 @@
   "Jednoduché": "ENJednoduché",
   "Jednotky": "ENJednotky",
   "Jezero Chasan leží na hranici s Mandžuskem a dle Pekingské smlouvy patří dle práva Státu. Do oblasti kolem jezera se v poslední době začaly přesouvat japonské vojenské jednotky, které se snaží ukrást toto území. Vůdce nedokáže tomuto bezpráví jen nečinně přihlížet. Strana je silná a ochrání všechny své soudruhy. Sovětská armáda ubrání jezero Chasan před japonskými vetřelci. ": "ENJezero Chasan leží na hranici s Mandžuskem a dle Pekingské smlouvy patří dle práva Státu. Do oblasti kolem jezera se v poslední době začaly přesouvat japonské vojenské jednotky, které se snaží ukrást toto území. Vůdce nedokáže tomuto bezpráví jen nečinně přihlížet. Strana je silná a ochrání všechny své soudruhy. Sovětská armáda ubrání jezero Chasan před japonskými vetřelci. ",
-  "Jih": "ENJih",
-  "Jihozápad": "ENJihozápad",
-  "Jižní Kavkaz": "ENJižní Kavkaz",
   "Jídlo": "ENJídlo",
-  "Kazachstán": "ENKazachstán",
   "Konfigurace": "Configuration",
   "Konfigurace minihry": "ENKonfigurace minihry",
   "Kulturní událost": "ENKulturní událost",
@@ -157,21 +151,17 @@
   "Rumunsko": "ENRumunsko",
   "Selhání během vojenské operace": "ENSelhání během vojenské operace",
   "Selhání při osvobození": "ENSelhání při osvobození",
-  "Severozápad": "ENSeverozápad",
   "Seznam operací": "ENSeznam operací",
   "Seznam transportů mezi regiony": "ENSeznam transportů mezi regiony",
   "Sovětský Svaz neodmítne pomoc žádným soudruhům, kteří bojují ve své zemi za spravedlivou společnost, za dělnictvo a za komunismus. Sláva revoluci! Sláva komunismu! Sláva Vůdci!": "ENSovětský Svaz neodmítne pomoc žádným soudruhům, kteří bojují ve své zemi za spravedlivou společnost, za dělnictvo a za komunismus. Sláva revoluci! Sláva komunismu! Sláva Vůdci!",
   "Standardní vedení": "ENStandard leadership",
   "Stav hry": "Game state",
   "Stav minihry": "ENStav minihry",
-  "Střed": "ENStřed",
   "Střední": "ENStřední",
-  "Střední černozem": "ENStřední černozem",
   "Stříbrná": "ENStříbrná",
   "Tanu Tuva je ochotným spojencem Státu i Strany. Lid Tanu Tuva již dlouho touží stát se součástí Státu, aby se již nemusel sám bránit imperialistickým útokům proradného Západu. Soudruzi z Tanu Tuva již připravili vše potřebné a těší se na to, až je Vůdce přijme do své otcovské náruče. Armádu Strany budou všichni vítat s radostí a s ůsměvem na tváři. Ať žije Strana!": "ENTanu Tuva je ochotným spojencem Státu i Strany. Lid Tanu Tuva již dlouho touží stát se součástí Státu, aby se již nemusel sám bránit imperialistickým útokům proradného Západu. Soudruzi z Tanu Tuva již připravili vše potřebné a těší se na to, až je Vůdce přijme do své otcovské náruče. Armádu Strany budou všichni vítat s radostí a s ůsměvem na tváři. Ať žije Strana!",
   "Turecko": "ENTurecko",
   "Těžké": "ENTěžké",
-  "Ural": "ENUral",
   "V regionu": "ENV regionu",
   "Ve Španělsku bojují španělští soudruzi i soudruzi z dalších zemích proti fašistické hrozbě. Sovětský Svaz rád podá pomocnou ruku španělským soudruhům, aby ve Španělsku mohla zvítězit revoluce.": "ENVe Španělsku bojují španělští soudruzi i soudruzi z dalších zemích proti fašistické hrozbě. Sovětský Svaz rád podá pomocnou ruku španělským soudruhům, aby ve Španělsku mohla zvítězit revoluce.",
   "Velice jednoduché": "ENVelice jednoduché",
@@ -195,7 +185,6 @@
   "Vojenští poradci do Československa": "ENVojenští poradci do Československa",
   "Vojenští poradci do Španělska": "ENVojenští poradci do Španělska",
   "Vojáci zemřeli hlady": "ENVojáci zemřeli hlady",
-  "Volha": "ENVolha",
   "Vycvičeno": "ENVycvičeno",
   "Vyhodnotit dějství": "Resolve act",
   "Vyplenit": "ENVyplenit",
@@ -204,7 +193,6 @@
   "Vyslaní vojácí se z operace v blízké době nevrátí.": "ENVyslaní vojácí se z operace v blízké době nevrátí.",
   "Vysoký": "ENVysoký",
   "Vyzbrojení nových vojáků": "ENVyzbrojení nových vojáků",
-  "Východní Sibiř": "ENVýchodní Sibiř",
   "Východočínská železnice byla vybudována díky úsilí, potu a krvi ruského lidu a byla po desetiletí pod ochranou sovětského impéria. Čínské vojenské jednotky se rozhodly porušit mezinárodní smlouvy a ukradnout dílo ruského lidu. Čínská armáda ale nedokáže zastrašit Vůdce. Sovětská armáda si opět vezme to, co jí patří a vyžene útočníky z jejich pozic. Sláva Straně!": "ENVýchodočínská železnice byla vybudována díky úsilí, potu a krvi ruského lidu a byla po desetiletí pod ochranou sovětského impéria. Čínské vojenské jednotky se rozhodly porušit mezinárodní smlouvy a ukradnout dílo ruského lidu. Čínská armáda ale nedokáže zastrašit Vůdce. Sovětská armáda si opět vezme to, co jí patří a vyžene útočníky z jejich pozic. Sláva Straně!",
   "Výcvik nových vojáků": "ENVýcvik nových vojáků",
   "Výstavba monumentu": "ENVýstavba monumentu",
@@ -303,5 +291,14 @@
   "Žlutá": "ENŽlutá",
   "žádné": "ENžádné",
   "Posílit": "Reinforce",
-  "Stáhnout se": "Withdraw"
+  "Stáhnout se": "Withdraw",
+  "Dálný východ": "ENDálný východ",
+  "Kavkaz": "ENKavkaz",
+  "Leningradská oblast": "ENLeningradská oblast",
+  "Moskevská oblast": "ENMoskevská oblast",
+  "Stalingradská oblast": "ENStalingradská oblast",
+  "Středoasijské stány": "ENStředoasijské stány",
+  "Ukrajina a Bělorusko": "ENUkrajina a Bělorusko",
+  "Ural": "ENUral",
+  "Východní Sibiř": "ENVýchodní Sibiř"
 }
