rename of Siberia region

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -300,5 +300,5 @@
   "Středoasijské stány": "ENStředoasijské stány",
   "Ukrajina a Bělorusko": "ENUkrajina a Bělorusko",
   "Ural": "ENUral",
-  "Východní Sibiř": "ENVýchodní Sibiř"
+  "Sibiř": "ENSibiř"
 }
