planning rebellions by admins

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -315,5 +315,7 @@
   "Účast na neúspěšné obraně obsazení regionu": "ENÚčast na neúspěšné obraně obsazení regionu",
   "Účast na úspěšné obraně vyplenění regionu": "ENÚčast na úspěšné obraně vyplenění regionu",
   "Účast na neúspěšné obraně vyplenění regionu": "ENÚčast na neúspěšné obraně vyplenění regionu",
-  "Účast na obraně před vypleněním regionu": "ENÚčast na obraně před vypleněním regionu"
+  "Účast na obraně před vypleněním regionu": "ENÚčast na obraně před vypleněním regionu",
+  "Přišli z regionu": "ENPřišli z regionu",
+  "Odebrat z regionu": "ENOdebrat z regionu"
 }
